Graph, Connecting my veins of Success!